--- a/style.css
+++ b/style.css
@@ -22,3 +22,21 @@ text-align: left;
 #start,#status{
     font-size: 22px;
 }
+
+h4
+{
+    background-color: #f5f5f5;
+    line-height: 2;
+    margin: 0px;
+}
+
+.modal-dialog
+{
+    width: 90%;
+}
+
+.instruction_image
+{
+    display: inline-block;
+    width: 45%;
+}
